# sgtelib

./: AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  README  configure.ac  sgtelib.pc.in
python/: Makefile.am  sgtelib.i
src/: Makefile  Makefile.am  Makefile.in  Matrix.cpp  Matrix.hpp  Surrogate.cpp  Surrogate.hpp  Surrogate_Ensemble.hpp  Surrogate_KS.hpp  Surrogate_Parameters.cpp  Surrogate_Parameters.hpp  Surrogate_Utils.cpp  Surrogate_Utils.hpp  Tests.cpp  Tests.hpp
